tests/samples/negative/generics/generic_struct_literal_inference_conflict.ax
module generic_struct_literal_inference_conflict;

struct Pair<T> {
    left: T;
    right: T;
}

fn main() -> i32 {
    let value = Pair { left: 1, right: true };
    return value.left;
}
